<resources>
    <string name="app_name">AND-Project</string>
    <string name="btn_login">Login</string>
    <string name="btn_goOffline">Go Offline</string>
    <string name="txtv_or">or</string>
    <string name="apptitle">Share My Books</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_share">Share</string>
    <string name="nav_header_title">Test</string>
    <string name="nav_header_subtitle">Test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_login_fragment">Hello login fragment</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_offline">Go offline</string>
    <string name="menu_goonline">Switch to online mode</string>
    <string name="menu_addBook">Add a book</string>
    <string name="addbookwelcome">Add a book</string>
    <string name="menu_bookList">Book list</string>
    <string name="booktitle">Book Title</string>
    <string name="author">Author Name</string>

</resources>