<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_add_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_add_24"
            android:title="@string/menu_gallery" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_baseline_add_24"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_baseline_add_24"
                android:title="@string/menu_logout"
                android:visibility="gone"
                />
            <item
                android:id="@+id/nav_offline"
                android:icon="@drawable/ic_baseline_add_24"
                android:title="@string/menu_offline" />
        </menu>
    </item>
</menu>
