<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_add_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_addBook"
            android:icon="@drawable/ic_baseline_add_24"
            android:title="@string/menu_addBook" />
        <item
            android:id="@+id/nav_bookList"
            android:icon="@drawable/ic_baseline_add_24"
            android:title="@string/menu_bookList" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_goonline"
                android:icon="@drawable/ic_baseline_add_24"
                android:title="@string/menu_goonline" />
        </menu>
    </item>
</menu>
